# semantic-agent-graph

./: .gitignore  Dockerfile  README.md  RESEARCH.md  TESTING.md  benchmark.py  demo.py  docker-compose.yml  ingest_dataset.py  pyproject.toml  sample_swe_trajectory.json  simulate_backtracking.py  simulate_pilot.py  visualizer.html
dashboard/: README.md  index.html  package-lock.json  package.json
dashboard/src/: App.css  App.tsx  index.css
dashboard/src/components/: GraphCanvas.tsx
semantic_agent_graph/: README.md  __init__.py  api.py  backtracking.py  extraction.py  memory.py  models.py  parser_swe.py  projection.py  runtime.py  store.py
tests/: conftest.py  test_api.py  test_backtracking.py  test_extraction.py  test_parser.py  test_runtime.py  test_websocket.py
